Removes hardcoded values

--- a/templates/options.conf
+++ b/templates/options.conf
@@ -34,7 +34,7 @@ mod_ruid2=yes
 userdir_access=yes
 harden_symlinks_patch=yes
 use_hostname_for_alias=no
-redirect_host=direct.novabyte.co
+redirect_host=yourdomain.com
 redirect_host_https=no
 
 #WEB Applications Settings
